Revision history for HTML::Forms

          - Moved onReady function to utils
          - Buttons now position on the right when required
          - Renames JS files
          - Adds drag title and icons to DataStructure field type
          - Adds Selector field type
          - Adds reveal password
          - Moves repeatable JS to utils
          - Inline server field validation
          - Shiny buttons
          - Adding Digits field type
          - Better error messages
          - Renamed Forms before/after build to before/after build fields
          - Regenerate meta data
          - Adds empty English lexicon
          - Hiding adds/remove class. Leaves display alone
          - Adds Image field. Adds showIfRequired
          - Better styling on form errors
          - CSS fonts
          - Label and colon right CSS improved
          - Started adding pod
          - Fiddled with label right
          - Better styling
          - Constants exports username
          - Adds timezone field
          - Looks labels up on the model
          - Adds action to forms
          - Focuses first form field
          - Minor style improvements
          - Switched to using less
          - Added sequence number to JS files
          - Reduced to using just one exporter
          - Updated dependencies
          - Moved MCat to own distribution
          - Made toke lifetime a config option
          - Adds tags to artist
          - Adds table row traits to MCat
          - Adds an API. Table preferences. JS column traits
          - Adds time zone handling to date field
          - Added config loader role
          - MCat complete
          - MCat track model working
          - MCat cd model working
          - MCat artist model working
          - MCat forms working
          - Added MCat server
          - Javascript mow has its own package deps system
          - Added time with zone field
          - Toggle js working